# OTUS_Homework_1

./: .travis.yml  CMakeLists.txt  description.json  description.json.in  gtest_version.cpp  main.cpp  test_version.cpp
